logs/stomp_moveit/build.make.006.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp: In member function ‘virtual bool stomp_moveit::StompPlanner::solve(planning_interface::MotionPlanDetailedResponse&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:272:5: error: ‘cout’ was not declared in this scope
     cout<<"duration from start for each waypoint:";
     ^~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:272:5: note: suggested alternative:
In file included from /opt/ros/melodic/include/ros/time.h:54:0,
                 from /opt/ros/melodic/include/ros/ros.h:38,
                 from /home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:26:
/usr/include/c++/7/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:273:13: error: expected unqualified-id before ‘)’ token
     for (int)
             ^
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:273:13: error: expected ‘;’ before ‘)’ token
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:273:13: error: expected primary-expression before ‘)’ token
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:273:13: error: expected ‘;’ before ‘)’ token
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
